Modified html js files

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 		<div class="ctrl-btns">
 			<button class="reset">reset</button>
-			<button class="prev-btn">prev</button>
-			<button class="next-btn">next</button>
+			<button class="increment">increment</button>
+			<button class="decrement">decrement</button>
 		</div>
 	</div>
 
